--- a/templates/docs/pivot.mustache
+++ b/templates/docs/pivot.mustache
@@ -2,9 +2,9 @@
 
          <!-- Basic Example
          ================================================== -->
-         <section id="pivot-simple">
+         <div class="bs-docs-section">
             <div class="page-header">
-               <h1>{{_i}}Basic Example{{/i}} <small></small></h1>
+               <h1 id="metro-pivot">Pivot Control <small></small></h1>
             </div>
             <div class="bs-docs-example" style="background-color: #f5f5f5;">
                <div id="pivot" class="pivot slide">
@@ -86,4 +86,4 @@
 <h1>demo with data-target and data-slide</h1>
 
 
-         </section>
+         </div>
