--- a/templates/partials/docs-sidebar.mustache
+++ b/templates/partials/docs-sidebar.mustache
@@ -227,6 +227,8 @@
 <li><a href="#metro-modals">Modal</a></li>
 <li><a href="#metro-datepicker">DatePicker</a></li>
 <li><a href="#metro-flipview">FlipView</a></li>
+<li><a href="#metro-pivot">Pivor</a></li>
+<li><a href="#metro-toast">Toast Notification</a></li>
 
 
 </ul>
