--- a/templates/docs/metro-components.mustache
+++ b/templates/docs/metro-components.mustache
@@ -507,15 +507,15 @@ $('#myModal').on('hidden', function () {
 
             <p>As component.</p>
             <div class="bs-docs-example">
-               <div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker">
+               <div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append date">
                   <input type="text" readonly="" value="12-02-2012" size="16" class="span2">
-                  <span class="add-on"><i class="icon-calendar"></i></span>
+                  <span class="add-on"><i class="icon-calendar-3"></i></span>
                </div>
             </div>
 <pre class="prettyprint linenums">
-&lt;div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker"&gt;
+&lt;div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append date"&gt;
    &lt;input type="text" readonly="" value="12-02-2012" size="16" class="span2"&gt;
-   &lt;span class="add-on"&gt;&lt;i class="icon-calendar"&gt;&lt;/i&gt;&lt;/span&gt;
+   &lt;span class="add-on"&gt;&lt;i class="icon-calendar-3"&gt;&lt;/i&gt;&lt;/span&gt;
    &lt;/div&gt;
 </pre>
 
@@ -535,7 +535,7 @@ $('#myModal').on('hidden', function () {
             </p>
 
 
-            <h2>Example carousel</h2>
+            <h2>Example</h2>
             <p>The slideshow below shows a generic plugin and component for cycling through elements like a carousel.</p>
             <div class="bs-docs-example">
                <div class="row">
@@ -564,14 +564,14 @@ $('#myModal').on('hidden', function () {
                               </div>
                            </div>
                         </div>
-                        <a class="left carousel-control" href="#myFlipview" data-slide="prev">&#xe0f4;</a>
-                        <a class="right carousel-control" href="#myFlipview" data-slide="next">&#xe0f1;</a>
+                        <a class="left carousel-control" href="#myFlipview" data-slide="prev">&#xe127;</a>
+                        <a class="right carousel-control" href="#myFlipview" data-slide="next">&#xe12a;</a>
                      </div>
                   </div>
                </div>
             </div>{{! /example }}
 <pre class="prettyprint linenums">
-&lt;div id="myCarousel" class="carousel flipview slide"&gt;
+&lt;div id="myFlipview" class="carousel flipview slide"&gt;
   &lt;!-- Carousel items --&gt;
   &lt;div class="carousel-inner"&gt;
     &lt;div class="active item"&gt;…&lt;/div&gt;
@@ -579,8 +579,8 @@ $('#myModal').on('hidden', function () {
     &lt;div class="item"&gt;…&lt;/div&gt;
   &lt;/div&gt;
   &lt;!-- Carousel nav --&gt;
-  &lt;a class="carousel-control left" href="#myCarousel" data-slide="prev"&gt;&amp;lsaquo;&lt;/a&gt;
-  &lt;a class="carousel-control right" href="#myCarousel" data-slide="next"&gt;&amp;rsaquo;&lt;/a&gt;
+  &lt;a class="carousel-control left" href="#myFlipview" data-slide="prev"&gt;&amp;#xe127;&lt;/a&gt;
+  &lt;a class="carousel-control right" href="#myFlipview" data-slide="next"&gt;&amp;#xe12a;&lt;/a&gt;
 &lt;/div&gt;
 </pre>
 
