--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -45,6 +45,8 @@ input[type=tel], input[type=url], input[type=search], textarea {
    height: 16px;
    line-height: 15px;
 }
+.input-prepend .btn-group .btn.dropdown-toggle .caret {margin-top: 0}
+
 .input-prepend .add-on:first-child,
 .input-prepend .btn:first-child {
    .formBorder;
