--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -8,7 +8,7 @@
    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
-   <meta name="viewport" content="width=device-width">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <title>{{title}}</title>
 
