--- a/less/bootmetro/progress-bars.less
+++ b/less/bootmetro/progress-bars.less
@@ -7,34 +7,51 @@ Progress control. */
 .progress {
    background-image: none;
    .no-border-radius;
-   height: 5px;
-}
-.progress.progress-indeterminate {
-   background-color: transparent;
-   height: 19px;
+   height: auto;
+
+   &.progress-indeterminate {
+      background-color: transparent;
+      height: auto;
+
+      .bar {
+         display: block;
+         position: static;
+         width: 88px;
+         height: 8px;
+         margin: 4px auto;
+         background: transparent url("../img/progress-indeterminate-light.gif") no-repeat 0 0;
+         .no-border-radius;
+         .no-box-shadow;
+      }
+
+      .win-ring {
+         display: inline-block;
+         margin: 5px 10px;
+         width: 50px;
+         height: 50px;
+         background: transparent url("../img/progress-indeterminate-ring-light.gif") no-repeat 0 0;
+
+         &.small {
+            width: 24px;
+            height: 24px;
+            background: transparent url("../img/progress-indeterminate-ring-light-small.gif") no-repeat 0 0;
+         }
+      }
+
+
+   }
+
+
 }
 
-   .progress.progress-indeterminate .bar {
-      display: block;
-      position: static;
-      width: 88px;
-      height: 8px;
-      margin: 4px auto;
-      background: transparent url("../img/progress-indeterminate-light.gif") no-repeat 0 0;
-      .no-border-radius;
-      .no-box-shadow;
-   }
+
+
 .win-ui-dark.progress.progress-indeterminate .bar {
    background: transparent url("../img/progress-indeterminate-dark.gif") no-repeat 0 0;
 }
 
-.progress.progress-indeterminate .win-ring.small {
-   display: inline-block;
-   width: 24px;
-   height: 24px;
-   margin: 5px 10px;
-   background: transparent url("../img/progress-indeterminate-ring-light-small.gif") no-repeat 0 0;
-}
+
+
 .win-ui-dark.progress.progress-indeterminate .win-ring.small {
    width: 24px;
    height: 24px;
