--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 .navbar-inner {
    background-image: none;
+   background-color: transparent;
    filter: 0;
    .no-box-shadow;
 }
