--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -25,3 +25,29 @@
       .no-border-radius;
    }
 }
+
+
+
+//
+// Metro Top Navbars
+// --------------------------------------------------
+.navbar.metro-navbar .navbar-inner {
+   background-color: #EEEEEE;
+}
+
+.navbar.metro-navbar .nav > li > a {
+   text-transform: uppercase;
+   background-color: #DDD;
+   margin-right: 4px;
+
+}
+
+.navbar.metro-navbar .nav > li.active > a {
+   background-color: #FFF;
+
+}
+
+.navbar.metro-navbar .nav li.dropdown .dropdown-toggle .caret,
+.navbar.metro-navbar .nav li.dropdown.open .caret {
+   margin-top: 0;
+}
