--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -32,22 +32,26 @@
 // Metro Top Navbars
 // --------------------------------------------------
 .navbar.metro-navbar .navbar-inner {
+   min-height: 60px;
+   height: 60px;
    background-color: #EEEEEE;
 }
 
-.navbar.metro-navbar .nav > li > a {
-   text-transform: uppercase;
-   background-color: #DDD;
-   margin-right: 4px;
+   .navbar.metro-navbar .nav > li {
+      line-height: 40px;
+   }
+      .navbar.metro-navbar .nav > li > a {
+         text-transform: uppercase;
+         background-color: #DDD;
+         margin-right: 4px;
+      }
 
-}
+   .navbar.metro-navbar .nav > li.active > a {
+      background-color: #FFF;
 
-.navbar.metro-navbar .nav > li.active > a {
-   background-color: #FFF;
+   }
 
-}
-
-.navbar.metro-navbar .nav li.dropdown .dropdown-toggle .caret,
-.navbar.metro-navbar .nav li.dropdown.open .caret {
-   margin-top: 0;
-}
+   .navbar.metro-navbar .nav li.dropdown .dropdown-toggle .caret,
+   .navbar.metro-navbar .nav li.dropdown.open .caret {
+      margin-top: 0;
+   }
