--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -44,6 +44,7 @@
          text-transform: uppercase;
          background-color: #DDD;
          margin-right: 4px;
+         text-shadow: none;
       }
 
    .navbar.metro-navbar .nav > li.active > a {
