fixed doc compilation

--- a/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
@@ -2,7 +2,7 @@
    <!-- JavaScript -->
    <li><a href="#javascript" class="nav-header">JavaScript</a></li>
    <li>
-      <a href="#js-overview">Overview</a><b class="caret"></b>
+      <a href="#js-overview">Overview</a>
       <ul class="nav">
          <li><a href="#js-individual-compiled">Individual or compiled</a></li>
          <li><a href="#js-data-attributes">Data attributes</a></li>
@@ -13,7 +13,7 @@
    </li>
    <li><a href="#js-transitions">Transitions</a></li>
    <li>
-      <a href="#js-modals">Modal</a><b class="caret"></b>
+      <a href="#js-modals">Modal</a>
       <ul class="nav">
          <li><a href="#modals-examples">Examples</a></li>
          <li><a href="#modals-usage">Usage</a></li>
