--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -2,7 +2,7 @@
    <!-- Components -->
    <li><a href="#components" class="nav-header">Components</a></li>
    <li>
-      <a href="#dropdowns">Dropdowns</a><b class="caret"></b>
+      <a href="#dropdowns">Dropdowns</a>
       <ul class="nav">
          <li><a href="#dropdowns-example">Example</a></li>
          <li><a href="#dropdowns-alignment">Alignment options</a></li>
@@ -10,7 +10,7 @@
       </ul>
    </li>
    <li>
-      <a href="#btn-groups">Button groups</a><b class="caret"></b>
+      <a href="#btn-groups">Button groups</a>
       <ul class="nav">
          <li><a href="#btn-groups-single">Basic button group</a></li>
          <li><a href="#btn-groups-toolbar">Button toolbar</a></li>
@@ -18,7 +18,7 @@
       </ul>
    </li>
    <li>
-      <a href="#btn-dropdowns">Button dropdowns</a><b class="caret"></b>
+      <a href="#btn-dropdowns">Button dropdowns</a>
       <ul class="nav">
          <li><a href="#btn-dropdowns-sizes">Button sizes</a></li>
          <!--<li><a href="#btn-dropdowns-single">Single button dropdown</a></li>-->
@@ -27,7 +27,7 @@
       </ul>
    </li>
    <li>
-      <a href="#nav">Navs</a><b class="caret"></b>
+      <a href="#nav">Navs</a>
       <ul class="nav">
          <li><a href="#nav-tabs">Tabs nav</a></li>
          <li><a href="#nav-pills">Pills nav</a></li>
@@ -40,7 +40,7 @@
       </ul>
    </li>
    <li>
-      <a href="#navbar">Navbar</a><b class="caret"></b>
+      <a href="#navbar">Navbar</a>
       <ul class="nav">
          <li><a href="#navbar-basic">Basic navbar</a></li>
          <li><a href="#navbar-nav">Nav links</a></li>
@@ -53,7 +53,7 @@
    </li>
    <li><a href="#breadcrumbs">Breadcrumbs</a></li>
    <li>
-      <a href="#pagination">Pagination</a><b class="caret"></b>
+      <a href="#pagination">Pagination</a>
       <ul class="nav">
          <li><a href="#pagination-default">Default pagination</a></li>
          <li><a href="#pagination-pager">Pager</a></li>
@@ -62,7 +62,7 @@
    <li><a href="#labels">Labels</a></li>
    <li><a href="#badges">Badges</a></li>
    <li>
-      <a href="#type-components">Typography</a><b class="caret"></b>
+      <a href="#type-components">Typography</a>
       <ul class="nav">
          <li><a href="#type-components-jumbotron">Jumbotron</a></li>
          <li><a href="#type-components-page-header">Page header</a></li>
@@ -70,7 +70,7 @@
    </li>
    <li><a href="#thumbnails">Thumbnails</a></li>
    <li>
-      <a href="#alerts">Alerts</a><b class="caret"></b>
+      <a href="#alerts">Alerts</a>
       <ul class="nav">
          <li><a href="#alerts-default">Default alert</a></li>
          <!--<li><a href="#alerts-block">Block alerts</a></li>-->
@@ -78,7 +78,7 @@
       </ul>
    </li>
    <li>
-      <a href="#progress">Progress bars</a><b class="caret"></b>
+      <a href="#progress">Progress bars</a>
       <ul class="nav">
          <li><a href="#progress-determinate">Determinate progress bar</a></li>
          <li><a href="#progress-stacked">Stacked</a></li>
@@ -89,7 +89,7 @@
    </li>
    <li><a href="#media">Media object</a></li>
    <!--<li>-->
-   <!--<a href="#list-group">List group</a><b class="caret"></b>-->
+   <!--<a href="#list-group">List group</a>-->
    <!--<ul class="nav">-->
    <!--<li><a href="#list-group-basic">Basic list group</a></li>-->
    <!--<li><a href="#list-group-chevrons">Chevrons</a></li>-->
@@ -101,7 +101,7 @@
    <!--</ul>-->
    <!--</li>-->
    <!--<li>-->
-   <!--<a href="#panels">Panels</a><b class="caret"></b>-->
+   <!--<a href="#panels">Panels</a>-->
    <!--<ul class="nav">-->
    <!--<li><a href="#panels-basic">Basic panel</a></li>-->
    <!--<li><a href="#panels-heading">Panel with heading</a></li>-->
@@ -110,7 +110,7 @@
    <!--</li></ul>-->
    <!--</li>-->
    <li>
-      <a href="#misc">Misc</a><b class="caret"></b>
+      <a href="#misc">Misc</a>
       <ul class="nav">
          <li><a href="#misc-well">Wells</a></li>
          <li><a href="#misc-close">Close icon</a></li>
