Fixed docs sidebar

--- a/templates/docs/docs-icons.mustache
+++ b/templates/docs/docs-icons.mustache
@@ -12,7 +12,7 @@
       <span class="label label-warning">Char codes are deprecrated!</span> Use of character code like <code>&#xe03e;</code> in the content is <strong>DEPRECATED</strong> and is recommended to replace any use of that codes with the equivalent css class listed below.
    </p>
 
-   <h2>CSS Class Names</h2>
+   <h2 id="class-names">CSS Class Names</h2>
    <ul class="the-icons clearfix" id="css-class-names">
 
    <li class="box1">
