--- a/templates/docs/sidebar_partials/sidebar-docs-icons.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-icons.mustache
@@ -1,3 +1,9 @@
 <ul class="nav bs-docs-sidenav">
-   <li><a href="#icons">Icons</a></li>
+   <li>
+      <a href="#icons">Icons</a>
+      <ul class="nav">
+         <li><a href="#class-names">CSS Class Names</a></li>
+      </ul>
+   </li>
+
 </ul>
