--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -287,6 +287,15 @@ AppBar control.
    text-shadow: none;
 }
 
+// force white color
+.btn.btn-warning,
+.btn.btn-danger,
+.btn.btn-success,
+.btn.btn-info,
+.btn.btn-inverse {
+   color: #FFF;
+}
+
 
 
 
