--- a/templates/docs/_layout.mustache
+++ b/templates/docs/_layout.mustache
@@ -76,7 +76,7 @@
                      <a href="./docs-index.html">Home</a>
                   </li>
                   <li class="{{docs-css}}">
-                     <a href="./docs-css.html">CSS</a>
+                     <a href="./docs-css.html">Basic CSS</a>
                   </li>
                   <li class="{{docs-icons}}">
                      <a href="./docs-icons.html">Icons</a>
@@ -126,6 +126,7 @@
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
    <![endif]-->
 
+   <script type="text/javascript" src="assets/js/google-code-prettify/prettify.js"></script>
    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
    <script type="text/javascript" src="assets/js/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="assets/js/bootmetro-pivot.js"></script>
