--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -1,5 +1,5 @@
-<ul class="nav bs-docs-sidenav">
-   <!-- Metro Components -->
+<ul class="nav metro-nav-list bs-docs-sidenav">
+<!-- Metro Components -->
    <li>
       <a href="#metro-components" class="nav-header">Advanced Components</a>
       <ul class="nav">
