--- a/templates/docs/sidebar_partials/sidebar-docs-css.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-css.mustache
@@ -1,4 +1,4 @@
-<ul class="nav bs-docs-sidenav">
+<ul class="nav metro-nav-list bs-docs-sidenav">
    <!-- CSS -->
    <li class="active">
       <a href="#scaffolding">Scaffolding</a>
@@ -11,7 +11,7 @@
       </ul>
    </li>
    <li>
-      <a href="#typographys" >Typography</a>
+      <a href="#typography" >Typography</a>
       <ul class="nav">
          <li><a href="#typography-headings">Headings</a></li>
          <li><a href="#typography-body-copy">Body copy</a></li>
