--- a/templates/docs/sidebar_partials/sidebar-docs-icons.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-icons.mustache
@@ -1,4 +1,4 @@
-<ul class="nav bs-docs-sidenav">
+<ul class="nav metro-nav-list bs-docs-sidenav">
    <li>
       <a href="#icons">Icons</a>
       <ul class="nav">
