--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -1,4 +1,4 @@
-<ul class="nav bs-docs-sidenav">
+<ul class="nav metro-nav-list bs-docs-sidenav">
    <!-- Components -->
    <li><a href="#components" class="nav-header">Components</a></li>
    <li>
@@ -36,6 +36,7 @@
          <li><a href="#nav-alignment">Alignment options</a></li>
          <li><a href="#nav-dropdowns">Using dropdowns</a></li>
          <li><a href="#nav-list">Nav list</a></li>
+         <li><a href="#metro-nav-list">Metro Nav list</a></li>
          <li><a href="#nav-tabbable">Tabbable nav</a></li>
       </ul>
    </li>
