--- a/templates/docs/sidebar_partials/sidebar-docs-index.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-index.mustache
@@ -1,4 +1,4 @@
-<ul class="nav bs-docs-sidenav">
+<ul class="nav metro-nav-list bs-docs-sidenav">
    <li>
       <a href="#getting-started">Getting started</a>
    </li>
