--- a/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-javascript.mustache
@@ -1,4 +1,4 @@
-<ul class="nav bs-docs-sidenav">
+<ul class="nav metro-nav-list bs-docs-sidenav">
    <!-- JavaScript -->
    <li><a href="#javascript" class="nav-header">JavaScript</a></li>
    <li>
