--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -104,7 +104,7 @@ a.header-dropdown {
    margin: 0;
    min-width: 14px;
    min-height: 18px;
-   padding: 0 3px;
+   padding: 0;
    font-family: 'IcoMoon';
    font-size: inherit;
    font-weight: normal;
