--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -20,6 +20,12 @@
    }
 }
 
+.navbar .nav li.dropdown .dropdown-toggle .caret,
+.navbar .nav li.dropdown.open .caret,
+.navbar .nav .dropdown-toggle .caret {
+   margin-top: 0;
+}
+
 .navbar-search {
    .search-query {
       .no-border-radius;
