--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -812,6 +812,7 @@
                <li class="active">
                   <a href="#">Applications</a>
                </li>
+               <li><a href="#">Utilities</a></li>
             </ul>
          </li>
          <li class="nav-header">Another list header</li>
@@ -819,9 +820,9 @@
             <a href="#">Profile</a>
             <ul class="nav">
                <li><a href="#">Sub 1</a></li>
-               <li>
-                  <a href="#">Sub 2</a>
-               </li>
+               <li><a href="#">Sub 2</a></li>
+               <li><a href="#">Sub 3</a></li>
+               <li><a href="#">Sub 4</a></li>
             </ul>
          </li>
          <li><a href="#">Settings</a></li>
@@ -831,10 +832,15 @@
 </div>
 <pre class="prettyprint linenums">
 &lt;ul class="nav metro-nav-list"&gt;
-  &lt;li class="nav-header"&gt;List header&lt;/li&gt;
-  &lt;li class="active"&gt;&lt;a href="#"&gt;Home&lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;&lt;a href="#"&gt;Library&lt;/a&gt;&lt;/li&gt;
-  ...
+   &lt;li class="nav-header"&gt;List header&lt;/li&gt;
+   &lt;li class="active"&gt;
+      &lt;a href="#"&gt;Home&lt;/a&gt;
+      &lt;ul class="nav"&gt;
+         &lt;li&gt;&lt;a href="#"&gt;Library&lt;/a&gt;&lt;/li&gt;
+         ...
+      &lt;/ul&gt;
+   &lt;/li&gt;
+   ...
 &lt;/ul&gt;
 </pre>
 <p>
