--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -49,7 +49,7 @@ Dropdown submenu
 }
 .dropup {
    .caret:after {
-      content: "\e12c";
+      content: "\e131";
    }
    .btn-large {
       .caret {
@@ -81,7 +81,7 @@ a.header-dropdown {
    margin-top: 0;
    color: #CCC;
    font-family: 'IcoMoon';
-   content: '\e0f1'
+   content: "\e12a"
 }
 .dropup .caret, .navbar-fixed-bottom .dropdown .caret {
    content: "";
