--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -246,7 +246,7 @@
 </div>
 
 
-
+<!--TODO: integrate in javascript ms-->
 <!-- Modal
 ================================================== -->
 <div class="bs-docs-section">
@@ -589,6 +589,9 @@
 </div>
 
 
+<!-- AppBar -->
+
+<!-- ListVIew -->
 
 <!-- Pivot -->
 
