--- a/templates/docs/docs-icons.mustache
+++ b/templates/docs/docs-icons.mustache
@@ -9,7 +9,7 @@
    <div id="icomoon-container" class="w-main centered">
    <p><span class="label label-important">Important!</span> Please remember to edit the file <em>bootmetro-icons.css</em> or <em>bootmetro-icons.less</em> to change the icomoon font files path according to your project structure.</p>
    <p>
-      <span class="label label-warning">Char codes are deprecrated!</span> Use of character code like <code>&#xe03e;</code> in the content is <strong>DEPRECATED</strong> and is recommended to replace any use of that codes with the equivalent css class listed below.
+      <span class="label label-warning">Char codes are deprecrated!</span> Use of character code like <code>&amp;#xe03e;</code> in the content is <strong>DEPRECATED</strong> and is recommended to replace any use of that codes with the equivalent css class listed below.
    </p>
 
    <h2 id="class-names">CSS Class Names</h2>
