--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -6,7 +6,7 @@
       <ul class="nav">
          <li><a href="#dropdowns-example">Example</a></li>
          <li><a href="#dropdowns-alignment">Alignment options</a></li>
-         <li><a href="#dropdowns-submenus">Alignment options</a></li>
+         <li><a href="#dropdowns-submenus">Sub menus</a></li>
       </ul>
    </li>
    <li>
