--- a/templates/docs/partials/basecss.mustache
+++ b/templates/docs/partials/basecss.mustache
@@ -236,11 +236,11 @@
       <li>Eget porttitor lorem</li>
    </ul>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;ul&gt;
-     &lt;li&gt;...&lt;/li&gt;
-   &lt;/ul&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;ul&gt;
+  &lt;li&gt;...&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
 
 <h3>Ordered</h3>
 <p>A list of items in which the order <em>does</em> explicitly matter.</p>
@@ -256,11 +256,11 @@
       <li>Eget porttitor lorem</li>
    </ol>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;ol&gt;
-     &lt;li&gt;...&lt;/li&gt;
-   &lt;/ol&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;ol&gt;
+  &lt;li&gt;...&lt;/li&gt;
+&lt;/ol&gt;
+</pre>
 
 <h3>Unstyled</h3>
 <p>Remove the default <code>list-style</code> and left padding on list items (immediate children only).</p>
@@ -283,14 +283,14 @@
       <li>Eget porttitor lorem</li>
    </ul>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;ul class="unstyled"&gt;
-     &lt;li&gt;...&lt;/li&gt;
-   &lt;/ul&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;ul class="unstyled"&gt;
+  &lt;li&gt;...&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
 
 <h3>Inline</h3>
-<p>Place all list items on a single line with <code>inline-block</code> and some light padding.</p>
+<p>Place all list items on a single line with <code>inline</code> and some light padding.</p>
 <div class="bs-docs-example">
    <ul class="inline">
       <li>Lorem ipsum</li>
@@ -298,11 +298,38 @@
       <li>Nulla volutpat</li>
    </ul>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;ul class="inline"&gt;
-        &lt;li&gt;...&lt;/li&gt;
-   &lt;/ul&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;ul class="inline"&gt;
+   &lt;li&gt;...&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
+
+
+<h3>Inline Links</h3>
+<p>Place all list items on a single line with <code>inline</code> and some light padding.</p>
+<div class="bs-docs-example">
+   <ul class="inline">
+      <li>
+         <a href="#">Lorem ipsum</a>
+      </li>
+      <li>
+         <a href="#">Phasellus iaculis</a>
+      </li>
+      <li>
+         <a href="#">Nulla volutpat</a>
+      </li>
+   </ul>
+</div>
+<pre class="prettyprint linenums">
+&lt;ul class="inline"&gt;
+   &lt;li&gt;
+      &lt;a href="#"&gt;&lt;/a&gt;
+   &lt;/li&gt;
+   ...
+&lt;/ul&gt;
+</pre>
+
+
 
 <h3>Description</h3>
 <p>A list of terms with their associated descriptions.</p>
