--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -461,17 +461,17 @@
       </div><!-- /btn-group -->
    </div><!-- /btn-toolbar -->
 </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="btn-group"&gt;
-     &lt;button class="btn"&gt;Action&lt;/button&gt;
-     &lt;button class="btn dropdown-toggle" data-toggle="dropdown"&gt;
-       &lt;span class="caret"&gt;&lt;/span&gt;
-     &lt;/button&gt;
-     &lt;ul class="dropdown-menu"&gt;
-       &lt;!-- dropdown menu links --&gt;
-     &lt;/ul&gt;
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="btn-group"&gt;
+  &lt;button class="btn"&gt;Action&lt;/button&gt;
+  &lt;button class="btn dropdown-toggle" data-toggle="dropdown"&gt;
+    &lt;span class="caret"&gt;&lt;/span&gt;
+  &lt;/button&gt;
+  &lt;ul class="dropdown-menu"&gt;
+    &lt;!-- dropdown menu links --&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;
+</pre>
 
 <h3>Sizes</h3>
 <p>Utilize the extra button classes <code>.btn-mini</code>, <code>.btn-small</code>, or <code>.btn-large</code> for sizing.</p>
@@ -516,17 +516,17 @@
       </div><!-- /btn-group -->
    </div><!-- /btn-toolbar -->
 </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="btn-group"&gt;
-     &lt;button class="btn btn-mini"&gt;Action&lt;/button&gt;
-     &lt;button class="btn btn-mini dropdown-toggle" data-toggle="dropdown"&gt;
-       &lt;span class="caret"&gt;&lt;/span&gt;
-     &lt;/button&gt;
-     &lt;ul class="dropdown-menu"&gt;
-       &lt;!-- dropdown menu links --&gt;
-     &lt;/ul&gt;
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="btn-group"&gt;
+  &lt;button class="btn btn-mini"&gt;Action&lt;/button&gt;
+  &lt;button class="btn btn-mini dropdown-toggle" data-toggle="dropdown"&gt;
+    &lt;span class="caret"&gt;&lt;/span&gt;
+  &lt;/button&gt;
+  &lt;ul class="dropdown-menu"&gt;
+    &lt;!-- dropdown menu links --&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;
+</pre>
 
 <h3 id="btn-dropdowns-dropup">Dropup menus</h3>
 <p>Dropdown menus can also be toggled from the bottom up by adding a single class to the immediate parent of <code>.dropdown-menu</code>. It will flip the direction of the <code>.caret</code> and reposition the menu itself to move from the bottom up instead of top down.</p>
@@ -556,18 +556,17 @@
       </div><!-- /btn-group -->
    </div>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="btn-group dropup"&gt;
-     &lt;button class="btn"&gt;Dropup&lt;/button&gt;
-     &lt;button class="btn dropdown-toggle" data-toggle="dropdown"&gt;
-       &lt;span class="caret"&gt;&lt;/span&gt;
-     &lt;/button&gt;
-     &lt;ul class="dropdown-menu"&gt;
-       &lt;!-- dropdown menu links --&gt;
-     &lt;/ul&gt;
-   &lt;/div&gt;
-   </pre>
-
+<pre class="prettyprint linenums">
+&lt;div class="btn-group dropup"&gt;
+  &lt;button class="btn"&gt;Dropup&lt;/button&gt;
+  &lt;button class="btn dropdown-toggle" data-toggle="dropdown"&gt;
+    &lt;span class="caret"&gt;&lt;/span&gt;
+  &lt;/button&gt;
+  &lt;ul class="dropdown-menu"&gt;
+    &lt;!-- dropdown menu links --&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;
+</pre>
 </div>
 
 
@@ -797,7 +796,7 @@
 
 
 
-<h2 id="metro-nav-list">Metro Nav lists</h2>
+<h2 id="metro-nav-list">Metro Nav lists&nbsp;<span class="badge badge-success">new</span></h2>
 <p>A metro styled groups of nav links with optional headers.</p>
 <h3>Example metro nav list</h3>
 <p>Take a list of links and add <code>class="nav metro-nav-list"</code>:</p>
