--- a/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-standard-components.mustache
@@ -36,7 +36,7 @@
          <li><a href="#nav-alignment">Alignment options</a></li>
          <li><a href="#nav-dropdowns">Using dropdowns</a></li>
          <li><a href="#nav-list">Nav list</a></li>
-         <li><a href="#metro-nav-list">Metro Nav list</a></li>
+         <li><a href="#metro-nav-list">Metro Nav list&nbsp;<span class="badge badge-success">new</span></a></li>
          <li><a href="#nav-tabbable">Tabbable nav</a></li>
       </ul>
    </li>
