--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -3,6 +3,16 @@
    <li>
       <a href="#metro-components" class="nav-header">Advanced Components</a>
       <ul class="nav">
+
+         <li>
+            <a href="#page-components">Page components</a>
+            <ul class="nav">
+               <li><a href="#type-components-page-header">Page header</a></li>
+               <li><a href="#type-components-metro-page-header">Page header with back button</a></li>
+               <li><a href="#type-components-hero">Hero</a></li>
+            </ul>
+         </li>
+
          <li><a href="#metro-commands">Command Buttons</a></li>
          <li><a href="#metro-progress">Metro Progress Bars</a></li>
          <li><a href="#metro-modals">Modal</a></li>
