--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -1375,26 +1375,26 @@
 <div class="bs-docs-example">
    <div class="pagination">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
 </div>
    <pre class="prettyprint linenums">
    &lt;div class="pagination"&gt;
      &lt;ul&gt;
-       &lt;li&gt;&lt;a href="#"&gt;Prev&lt;/a&gt;&lt;/li&gt;
+       &lt;li&gt;&lt;a href="#"&gt;&lt;&lt;/a&gt;&lt;/li&gt;
        &lt;li&gt;&lt;a href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
        &lt;li&gt;&lt;a href="#"&gt;2&lt;/a&gt;&lt;/li&gt;
        &lt;li&gt;&lt;a href="#"&gt;3&lt;/a&gt;&lt;/li&gt;
        &lt;li&gt;&lt;a href="#"&gt;4&lt;/a&gt;&lt;/li&gt;
        &lt;li&gt;&lt;a href="#"&gt;5&lt;/a&gt;&lt;/li&gt;
-       &lt;li&gt;&lt;a href="#"&gt;Next&lt;/a&gt;&lt;/li&gt;
+       &lt;li&gt;&lt;a href="#"&gt;&gt;&lt;/a&gt;&lt;/li&gt;
      &lt;/ul&gt;
    &lt;/div&gt;
    </pre>
@@ -1410,81 +1410,81 @@
 <div class="bs-docs-example">
    <div class="pagination pagination-centered">
       <ul>
-         <li class="disabled"><a href="#">&laquo;</a></li>
+         <li class="disabled"><a href="#">&lt;</a></li>
          <li class="active"><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
 </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="pagination"&gt;
-     &lt;ul&gt;
-       &lt;li class="disabled"&gt;&lt;a href="#"&gt;Prev&lt;/a&gt;&lt;/li&gt;
-       &lt;li class="active"&gt;&lt;a href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
-       ...
-     &lt;/ul&gt;
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="pagination"&gt;
+  &lt;ul&gt;
+    &lt;li class="disabled"&gt;&lt;a href="#"&gt;&lt;&lt;/a&gt;&lt;/li&gt;
+    &lt;li class="active"&gt;&lt;a href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
+    ...
+  &lt;/ul&gt;
+&lt;/div&gt;
+</pre>
 <p>You can optionally swap out active or disabled anchors for spans to remove click functionality while retaining intended styles.</p>
-   <pre class="prettyprint linenums">
-   &lt;div class="pagination"&gt;
-     &lt;ul&gt;
-       &lt;li class="disabled"&gt;&lt;span&gt;Prev&lt;/span&gt;&lt;/li&gt;
-       &lt;li class="active"&gt;&lt;span&gt;1&lt;/span&gt;&lt;/li&gt;
-       ...
-     &lt;/ul&gt;
-   &lt;/div&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;div class="pagination"&gt;
+  &lt;ul&gt;
+    &lt;li class="disabled"&gt;&lt;span&gt;&lt;&lt;/span&gt;&lt;/li&gt;
+    &lt;li class="active"&gt;&lt;span&gt;1&lt;/span&gt;&lt;/li&gt;
+    ...
+  &lt;/ul&gt;
+&lt;/div&gt;
+</pre>
 
 <h3>Sizes</h3>
 <p>Fancy larger or smaller pagination? Add <code>.pagination-large</code>, <code>.pagination-small</code>, or <code>.pagination-mini</code> for additional sizes.</p>
 <div class="bs-docs-example">
    <div class="pagination pagination-large">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
    <div class="pagination">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
    <div class="pagination pagination-small">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
    <div class="pagination pagination-mini">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
 </div>
@@ -1516,13 +1516,13 @@
 <div class="bs-docs-example">
    <div class="pagination pagination-centered">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
 </div>
@@ -1534,13 +1534,13 @@
 <div class="bs-docs-example">
    <div class="pagination pagination-right">
       <ul>
-         <li><a href="#">&laquo;</a></li>
+         <li><a href="#">&lt;</a></li>
          <li><a href="#">1</a></li>
          <li><a href="#">2</a></li>
          <li><a href="#">3</a></li>
          <li><a href="#">4</a></li>
          <li><a href="#">5</a></li>
-         <li><a href="#">&raquo;</a></li>
+         <li><a href="#">&gt;</a></li>
       </ul>
    </div>
 </div>
@@ -1561,14 +1561,14 @@
 <p>By default, the pager centers links.</p>
 <div class="bs-docs-example">
    <ul class="pager">
-      <li><a href="#">Previous</a></li>
-      <li><a href="#">Next</a></li>
+      <li class="previous"><a href="#">Previous</a></li>
+      <li class="next"><a href="#">Next</a></li>
    </ul>
 </div>
    <pre class="prettyprint linenums">
    &lt;ul class="pager"&gt;
-     &lt;li&gt;&lt;a href="#"&gt;Previous&lt;/a&gt;&lt;/li&gt;
-     &lt;li&gt;&lt;a href="#"&gt;Next&lt;/a&gt;&lt;/li&gt;
+     &lt;li class="previous"&gt;&lt;a href="#"&gt;Previous&lt;/a&gt;&lt;/li&gt;
+     &lt;li class="next"&gt;&lt;a href="#"&gt;Next&lt;/a&gt;&lt;/li&gt;
    &lt;/ul&gt;
    </pre>
 
@@ -1764,48 +1764,18 @@
 
 
 
-<!-- Typographic components
-================================================== -->
-<div class="bs-docs-section">
-   <div class="page-header">
-      <h1 id="type-components">Typographic components</h1>
-   </div>
+<!--&lt;!&ndash; Typographic components-->
+<!--================================================== &ndash;&gt;-->
+<!--<div class="bs-docs-section">-->
+   <!--<div class="page-header">-->
+      <!--<h1 id="type-components">Typographic components</h1>-->
+   <!--</div>-->
 
-   <h2 id="type-components-jumbotron">Hero unit</h2>
-   <p>A lightweight, flexible component to showcase key content on your site. It works well on marketing and content-heavy sites.</p>
-   <div class="bs-docs-example">
-      <div class="hero-unit">
-         <h1>Hello, world!</h1>
-         <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-         <p><a class="btn btn-primary btn-large">Learn more</a></p>
-      </div>
-   </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="hero-unit"&gt;
-     &lt;h1&gt;Heading&lt;/h1&gt;
-     &lt;p&gt;Tagline&lt;/p&gt;
-     &lt;p&gt;
-       &lt;a class="btn btn-primary btn-large"&gt;
-         Learn more
-       &lt;/a&gt;
-     &lt;/p&gt;
-   &lt;/div&gt;
-   </pre>
 
-   <h2 id="type-components-page-header">Page header</h2>
-   <p>A simple shell for an <code>h1</code> to appropriately space out and segment sections of content on a page. It can utilize the <code>h1</code>'s default <code>small</code>, element as well most other components (with additional styles).</p>
-   <div class="bs-docs-example">
-      <div class="page-header">
-         <h1>Example page header <small>Subtext for header</small></h1>
-      </div>
-   </div>
-   <pre class="prettyprint linenums">
-   &lt;div class="page-header"&gt;
-     &lt;h1&gt;Example page header &lt;small&gt;Subtext for header&lt;/small&gt;&lt;/h1&gt;
-   &lt;/div&gt;
-   </pre>
 
-</div>
+
+
+<!--</div>-->
 
 
 
