--- a/templates/docs/partials/basecss.mustache
+++ b/templates/docs/partials/basecss.mustache
@@ -1034,21 +1034,21 @@
       <span class="metro-radio">Option two can be something else and selecting it will deselect option one</span>
    </label>
 </form>
-   <pre class="prettyprint linenums">
-   &lt;label class="checkbox"&gt;
-      &lt;input type="checkbox" value=""&gt;
-      &lt;span class="metro-checkbox"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
-   &lt;/label&gt;
+<pre class="prettyprint linenums">
+&lt;label class="checkbox"&gt;
+   &lt;input type="checkbox" value=""&gt;
+   &lt;span class="metro-checkbox"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
+&lt;/label&gt;
 
-   &lt;label class="radio"&gt;
-      &lt;input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked&gt;
-      &lt;span class="metro-radio"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
-   &lt;/label&gt;
-   &lt;label class="radio"&gt;
-      &lt;input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"&gt;
-      &lt;span class="metro-radio"&gt;Option two can be something else and selecting it will deselect option one&lt;/span&gt;
-   &lt;/label&gt;
-   </pre>
+&lt;label class="radio"&gt;
+   &lt;input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked&gt;
+   &lt;span class="metro-radio"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
+&lt;/label&gt;
+&lt;label class="radio"&gt;
+   &lt;input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"&gt;
+   &lt;span class="metro-radio"&gt;Option two can be something else and selecting it will deselect option one&lt;/span&gt;
+&lt;/label&gt;
+</pre>
 
 <h4>Inline checkboxes</h4>
 <p>Add the <code>.inline</code> class to a series of checkboxes or radios for controls appear on the same line.</p>
@@ -1066,20 +1066,101 @@
       <span class="metro-checkbox">3</span>
    </label>
 </form>
-   <pre class="prettyprint linenums">
-   &lt;label class="checkbox inline"&gt;
-     &lt;input type="checkbox" id="inlineCheckbox1" value="option1"&gt;
-      &lt;span class="metro-checkbox"&gt;1&lt;/span&gt;
-   &lt;/label&gt;
-   &lt;label class="checkbox inline"&gt;
-     &lt;input type="checkbox" id="inlineCheckbox2" value="option2"&gt;
-      &lt;span class="metro-checkbox"&gt;2&lt;/span&gt;
-   &lt;/label&gt;
-   &lt;label class="checkbox inline"&gt;
-     &lt;input type="checkbox" id="inlineCheckbox3" value="option3"&gt;
-      &lt;span class="metro-checkbox"&gt;3&lt;/span&gt;
-   &lt;/label&gt;
-   </pre>
+<pre class="prettyprint linenums">
+&lt;label class="checkbox inline"&gt;
+  &lt;input type="checkbox" id="inlineCheckbox1" value="option1"&gt;
+   &lt;span class="metro-checkbox"&gt;1&lt;/span&gt;
+&lt;/label&gt;
+&lt;label class="checkbox inline"&gt;
+  &lt;input type="checkbox" id="inlineCheckbox2" value="option2"&gt;
+   &lt;span class="metro-checkbox"&gt;2&lt;/span&gt;
+&lt;/label&gt;
+&lt;label class="checkbox inline"&gt;
+  &lt;input type="checkbox" id="inlineCheckbox3" value="option3"&gt;
+   &lt;span class="metro-checkbox"&gt;3&lt;/span&gt;
+&lt;/label&gt;
+</pre>
+
+
+<h4>Right-To-Left support <span class="badge badge-success">new</span></h4>
+<p>Add the <code>dir="rtl"</code> attribute to a parent element or the body to have checkboxes or radios displayed from right to left.</p>
+<div class="bs-docs-example">
+   <div dir="rtl">
+      <form>
+         <label class="checkbox">
+            <input type="checkbox" value="">
+            <span class="metro-checkbox">Option one is this and that&mdash;be sure to include why it's great</span>
+         </label>
+         <br>
+         <label class="radio">
+            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+            <span class="metro-radio">Option one is this and that&mdash;be sure to include why it's great</span>
+         </label>
+         <label class="radio">
+            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+            <span class="metro-radio">Option two can be something else and selecting it will deselect option one</span>
+         </label>
+      </form>
+   </div>
+</div>
+<pre class="prettyprint linenums">
+&lt;div dir="rtl"&gt;
+   ...
+      &lt;label class="checkbox"&gt;
+         &lt;input type="checkbox" value=""&gt;
+         &lt;span class="metro-checkbox"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
+      &lt;/label&gt;
+
+      &lt;label class="radio"&gt;
+         &lt;input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked&gt;
+         &lt;span class="metro-radio"&gt;Option one is this and that&mdash;be sure to include why it's great&lt;/span&gt;
+      &lt;/label&gt;
+      &lt;label class="radio"&gt;
+         &lt;input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"&gt;
+         &lt;span class="metro-radio"&gt;Option two can be something else and selecting it will deselect option one&lt;/span&gt;
+      &lt;/label&gt;
+   ...
+&lt;/div&gt;
+</pre>
+
+<div class="bs-docs-example">
+   <div dir="rtl">
+      <form>
+         <label class="checkbox inline">
+            <input type="checkbox" id="inlineCheckbox1" value="option1">
+            <span class="metro-checkbox">1</span>
+         </label>
+         <label class="checkbox inline">
+            <input type="checkbox" id="inlineCheckbox2" value="option2">
+            <span class="metro-checkbox">2</span>
+         </label>
+         <label class="checkbox inline">
+            <input type="checkbox" id="inlineCheckbox3" value="option3">
+            <span class="metro-checkbox">3</span>
+         </label>
+      </form>
+   </div>
+</div>
+<pre class="prettyprint linenums">
+&lt;div dir="rtl"&gt;
+   ...
+      &lt;label class="checkbox inline"&gt;
+        &lt;input type="checkbox" id="inlineCheckbox1" value="option1"&gt;
+         &lt;span class="metro-checkbox"&gt;1&lt;/span&gt;
+      &lt;/label&gt;
+      &lt;label class="checkbox inline"&gt;
+        &lt;input type="checkbox" id="inlineCheckbox2" value="option2"&gt;
+         &lt;span class="metro-checkbox"&gt;2&lt;/span&gt;
+      &lt;/label&gt;
+      &lt;label class="checkbox inline"&gt;
+        &lt;input type="checkbox" id="inlineCheckbox3" value="option3"&gt;
+         &lt;span class="metro-checkbox"&gt;3&lt;/span&gt;
+      &lt;/label&gt;
+   ...
+&lt;/div&gt;
+</pre>
+
+
 
 <h3>Selects</h3>
 <p>Use the default option or specify a <code>multiple="multiple"</code> to show multiple options at once.</p>
